--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Tariq1343.github.io/reactcicd",  // This line added
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"  // This line added
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -21,7 +23,8 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",  // Ensure 'gh-pages' is present
     "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "vite": "^7.0.6"
   }
 }
