--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "reactcicd",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "homepage": "https://Tariq1343.github.io/reactcicd",
+  "type": "module","home":"https://Tariq1343.github.io/reactcicd",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -25,6 +25,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
-    "vite": "^7.0.6"
+    "vite": "^7.0.4"
   }
 }
